# iol

./: .clang-format  CMakeLists.txt  README.md
include/iol/: awaitable.hpp  awaitable_traits.hpp  concepts.hpp  generator.hpp  get_allocator.hpp  is_awaitable.hpp  meta.hpp  static_thread_pool.hpp  sync_wait.hpp  tag_invoke.hpp  type_traits.hpp
include/iol/detail/: allocation_utility.hpp  config.hpp  fast_mutex.hpp  operation_base.hpp  operation_queue.hpp  simple_manual_reset_event.hpp  sync_wait_task.hpp
include/iol/execution/: completion_signatures.hpp  connect.hpp  env.hpp  general_queries.hpp  read.hpp  receiver.hpp  receiver_adaptor.hpp  run_loop.hpp  scheduler.hpp  sender.hpp  sender_adaptor_closure.hpp  sender_factories.hpp  start.hpp  sync_wait.hpp  then.hpp
src/: CMakeLists.txt  fast_mutex.cpp  operation_queue.cpp  simple_manual_reset_event.cpp  static_thread_pool.cpp
src/execution/: run_loop.cpp
test/: CMakeLists.txt  main.cpp
